# ferd

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  sonar-project.properties
.github/workflows/: build-docker-image.yml  build.yml  cpplint.yml  sonarcloud.yml
include/: gameTriangle.hpp
include/framework/: OpenGLWrapper.hpp  ferd_color.hpp  gameProgram.hpp  gameShader.hpp  graphicsFramework.hpp  graphicsProgram.hpp  graphicsScreen.hpp  windowHandler.hpp
include/framework/geometry/: circleObject.hpp  lineObject.hpp  rectangleObject.hpp
include/game/: camera.hpp  line.hpp  lineWaypoint.hpp  rail.hpp  rectangleObject.hpp  train.hpp  trainNavigator.hpp  trainPhysics.hpp  train_util.hpp  world.hpp
include/game/physics/: kinematics.hpp
include/game/rail/: railConnection.hpp  railPiece.hpp  railWalker.hpp  stationSeeker.hpp  straightRailPiece.hpp  straightRailStation.hpp
include/game/waypoint/: station.hpp  waypoint.hpp
include/train/: rectangle.hpp
lib/: CMakeLists.txt  gameTriangle.cpp
lib/framework/: CMakeLists.txt  gameProgram.cpp  gameShader.cpp  graphicsFramework.cpp  graphicsProgram.cpp  graphicsScreen.cpp  windowHandler.cpp
lib/framework/geometry/: circleObject.cpp  lineObject.cpp  rectangleObject.cpp
lib/game/: CMakeLists.txt  camera.cpp  line.cpp  rectangleObject.cpp  train.cpp  trainNavigator.cpp  trainPhysics.cpp  world.cpp
lib/game/rail/: railConnection.cpp  railPiece.cpp  railWalker.cpp  stationSeeker.cpp  straightRailPiece.cpp  straightRailStation.cpp
lib/train/: rectangle.cpp
prjs/hello_opengl/src/: main.cpp
prjs/hello_world/: CMakeLists.txt
prjs/hello_world/src/: main.cpp
src/: CMakeLists.txt  gameProgram.cpp  gameProgram.hpp  gameShader.cpp  gameShader.hpp  main.cpp  windowHandler.cpp
src/shader/: CircleFragmentShader.fragmentshader  CircleVertexShader.vertexshader  LineVertexShader.vertexshader  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
tests/: CMakeLists.txt
tests/hello_test/: CMakeLists.txt
tests/lib/game/line/: CMakeLists.txt  line_test.cpp
tests/lib/game/line/src/: line_test.cpp
tests/lib/game/rail/railConnection/: CMakeLists.txt  rail_connection_test.cpp
tests/lib/game/rail/straightRailPiece/: CMakeLists.txt  straight_rail_piece_test.cpp
tests/mocks/: MockOpenGLWrapper.h
